--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   freezed_annotation: ^2.4.1
   dio: ^5.4.0
   dartz: ^0.10.1
+  local_auth: ^2.1.8
+  google_fonts: ^6.1.0
 
 dev_dependencies:
   flutter_test:
@@ -29,10 +31,8 @@ flutter:
 
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
